# frist

./: CMakeLists.txt  CMakeUserPresets.json  EventFilterObject.cpp  EventFilterObject.h  LoginRegisterDlg.cpp  LoginRegisterDlg.h  Resource.qrc  main.cpp
Resource/: style.css
